# panda3d-simplematcap

./: MANIFEST.in  README.md  setup.cfg  setup.py
simplematcap/: __init__.py
simplematcap/shaders/: matcap.frag  matcap.vert
