[metadata]
name = panda3d-simplematcap
author = Tiziano Bettio
license_file=LICENSE.txt
home-page = https://github.com/tizilogic/panda3d-simplematcap
description = A simple, lightweight render pipeline for Panda3D using MatCap
long-description = file: README.md
long-description-content-type = text/markdown
license = BSD
license-file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include-package-data = true

[global]
verbose=0
